--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -55,6 +55,8 @@
     </li>
     <li><a href="http://square.github.io/retrofit/"> Retrofit by Square</a>
     </li>
+    <li><a href="https://github.com/square/leakcanary"> LeakCanary by Square</a>
+    </li>
     <li><a href="http://jsoup.org/">jsoup by Jonathan Hedley</a>
     </li>
     <li><a href="http://jakewharton.github.io/butterknife/"> Butter Knife by Jake Wharton</a>
