--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -73,6 +73,7 @@
     </li>
     <li><a href="http://fontawesome.io/"> Font Awesome by Dave Gandy</a></li>
     <li><a href="http://musicbrainz.org/"> MusicBrainz by MetaBrainz Foundation</a></li>
+    <li><a href="https://fonts.google.com/specimen/Asap"> Asap font by Omnibus-Type</a></li>
 </ul>
 <p></p>
 
