add Material Tap Target Prompt for agenda

--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -74,6 +74,7 @@
     <li><a href="http://fontawesome.io/"> Font Awesome by Dave Gandy</a></li>
     <li><a href="http://musicbrainz.org/"> MusicBrainz by MetaBrainz Foundation</a></li>
     <li><a href="https://fonts.google.com/specimen/Asap"> Asap font by Omnibus-Type</a></li>
+    <li><a href="https://github.com/sjwall/MaterialTapTargetPrompt"> Material Tap Target Prompt by Sam Wall</a></li>
 </ul>
 <p></p>
 
